game-app/service.yml
kind: Service
apiVersion: v1
metadata:
  name: game-app
  namespace: game-app-ns
spec:
  selector:
    app: game-app
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
