game-app/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
   - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: <Service>
            port: 
              number: <Port>
